# jarvis-agent

./: .gitignore  CLEANUP_SUMMARY.md  README.md  clean_install.bat  fix_dependencies.bat  pyproject.toml  start_backend.bat  start_frontend.bat  start_jarvis.bat  start_mcp_servers.bat  start_server.bat
backend/: .env.example  .gitignore  init_db.py
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  core.py  enhanced_core.py  error_handling.py  executor.py  observer.py  parser.py  planner.py
backend/app/api/: __init__.py  chat.py  voice.py  websocket.py
backend/app/llm/: __init__.py  (+2 more)
docs/: GOOGLE_API_SETUP.md  MCP_TEST_RESULTS.md  VOICE_SERVER_TEST_RESULTS.md
frontend/: package.json
frontend/app/: page.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
mcp-servers/mcp-calendar-google/: requirements.txt  server.py  validate_server.py
mcp-servers/mcp-gmail/: server.py
mcp-servers/mcp-memory-db/: requirements.txt  server.py
mcp-servers/mcp-telegram/: requirements.txt  server.py
mcp-servers/mcp-vector-db/: requirements.txt  server.py
mcp-servers/mcp-voice/: requirements.txt  server.py  validate_server.py
mcp_servers/: README.md  base_server.py
mcp_servers/mcp-calendar-google/: requirements.txt
mcp_servers/mcp-gmail/: validate_server.py
mcp_servers/mcp-memory-db/: requirements.txt
mcp_servers/mcp-telegram/: requirements.txt
mcp_servers/mcp-vector-db/: requirements.txt
mcp_servers/mcp-voice/: INSTALL.md  requirements.txt
mcp_servers/mcp-windows-os/: requirements.txt  server.py  validate_server.py
(+15 files in other folders)
