[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS - Multimodal Agentic AI Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    
    # LLM & AI
    "aiohttp>=3.9.1",
    
    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "chromadb>=0.4.22",
    
    # Google APIs (optional)
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.116.0",
    
    # Telegram (optional)
    "python-telegram-bot>=20.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
